update orbit around the Sun

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.28)
 
 project(TheSun)
-
-set(SOURCES src/main.cpp src/Objects.cpp)
+find_package(SFML 2.6 REQUIRED COMPONENTS graphics window system)
+set(SOURCES src/main.cpp src/Objects.cpp src/SystemMap.cpp)
 
 include_directories(include)
 
 add_executable(TheSun ${SOURCES})
 
-
+target_link_libraries(TheSun sfml-graphics sfml-window sfml-system)
